# comso-exp2

./: .gitignore  .wget-hsts  README.md  interact.py  loader.py  nohup.out  perceive.py  pyproject.toml  reason.py  run_pipeline.py  test_interact.py  test_reason.py
pir-pipeline/: .gitignore  README.md  pyproject.toml  requirements.txt
pir-pipeline/output/nusar-2021_action_both_9033-c02a_9033_user_id_2021-02-04_140532/: report.json
pir-pipeline/pir/: act.py  perceive.py  reason.py  types.py
pir-pipeline/scripts/: run_pipeline.py  setup.sh  start_server.sh
pir-pipeline/tests/: test_loader.py  test_percieve.py  test_reason.py
scripts/: setup.sh
