[project]
name = "this-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=0.27.0",
    "blake3>=1.0.8",
    "einops>=0.8.2",
    "ffmpeg-python>=0.2.0",
    "huggingface-hub>=0.21.0",
    "imageio[ffmpeg,pyav]>=2.37.2",
    "networkx>=3.2",
    "numpy==1.26.4",
    "openai>=1.12.0",
    "opencv-python-headless>=4.9.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "supervision>=0.21.0",
    "tokenizers>=0.15.0",
    "torch==2.5.1",              # ← SAM2 se compila contra esto
    "torchvision==0.20.1",       # ← Compatible con torch 2.5.1
    "tqdm>=4.66.0",
    "transformers>=4.48.0",
    "vllm==0.6.5",               # ← Última versión con PyTorch 2.5.1
    "sam-2",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }
